--- a/src/content/post/novo-site-do-projeto.mdx
+++ b/src/content/post/novo-site-do-projeto.mdx
@@ -6,3 +6,4 @@ excerpt: Conheça o site do projeto e saiba mais sobre o que estamos desenvolven
 image: ~/assets/images/default.png
 ---
 
+Hello World!
