fix: url materials

--- a/src/content/post/bugcup-2025.mdx
+++ b/src/content/post/bugcup-2025.mdx
@@ -27,6 +27,6 @@ Marque na sua agenda para não perder nenhum prazo:
 
 1. **Monte sua equipe:** As equipes são formadas por três integrantes. Chame seus colegas e amigos!
 2. **Fique de olho:** Em breve, divulgaremos mais informações sobre o regulamento completo e como realizar as inscrições.
-3. **Comece a treinar:** Aproveite [nossos materiais](ahoradocodigo.com/landing/dicas-bugcup) do projeto para se preparar.
+3. **Comece a treinar:** Aproveite [nossos materiais](/landing/dicas-bugcup) do projeto para se preparar.
 
 Vamos juntos mostrar a força da programação do IFFar Frederico Westphalen! Contamos com a sua participação
