feat: add inscription date

--- a/src/content/post/bugcup-2025.mdx
+++ b/src/content/post/bugcup-2025.mdx
@@ -30,3 +30,9 @@ Marque na sua agenda para não perder nenhum prazo:
 3. **Comece a treinar:** Aproveite [nossos materiais](/landing/dicas-bugcup) do projeto para se preparar.
 
 Vamos juntos mostrar a força da programação do IFFar Frederico Westphalen! Contamos com a sua participação
+
+---
+
+## Inscreva-se
+
+Preencha o [formulário de inscrição](https://forms.gle/skjtVVySpnpf7HWd8) para garantir sua vaga na BugCup 2025!
